// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add error: does not exist 1`] = `
Object {
  "error": [Error: seed dendron.no-exist does not exist],
}
`;

exports[`add ok: exists 1`] = `".git .gitignore dendron.code-workspace dendron.yml seed.yml vault"`;

exports[`add ok: exists 2`] = `"dendron.code-workspace dendron.yml hooks seeds vault1 vault2 vault3"`;

exports[`add ok: exists 3`] = `
"version: 1
vaults:
    -
        fsPath: vault
        seed: dendron.foo
        name: dendron.foo
    -
        fsPath: vault1
    -
        fsPath: vault2
    -
        fsPath: vault3
        name: vaultThree
useFMTitle: true
useNoteTitleForLink: true
noAutoCreateOnDefinition: true
noLegacyNoteRef: true
noXVaultWikiLink: true
lookupConfirmVaultOnCreate: false
mermaid: true
useKatex: true
autoFoldFrontmatter: true
journal:
    dailyDomain: daily
    name: journal
    dateFormat: y.MM.dd
    addBehavior: childOfDomain
    firstDayOfWeek: 1
site:
    copyAssets: true
    siteHierarchies:
        - root
    siteRootDir: docs
    usePrettyRefs: true
    title: Dendron
    description: Personal knowledge space
    duplicateNoteBehavior:
        action: useVault
        payload:
            - vault1
            - vault2
            - vaultThree
            - dendron.foo
initializeRemoteVaults: true
seeds:
    dendron.foo: {}
"
`;

exports[`add ok: exists 4`] = `
"{
    \\"folders\\": [
        {
            \\"path\\": \\"seeds/dendron.foo/vault\\",
            \\"name\\": \\"dendron.foo\\"
        },
        {
            \\"path\\": \\"vault1\\"
        },
        {
            \\"path\\": \\"vault2\\"
        },
        {
            \\"path\\": \\"vault3\\",
            \\"name\\": \\"vaultThree\\"
        }
    ],
    \\"settings\\": {},
    \\"extensions\\": {}
}"
`;

exports[`add ok: seed with site 1`] = `".git .gitignore dendron.code-workspace dendron.yml seed.yml vault"`;

exports[`add ok: seed with site 2`] = `"dendron.code-workspace dendron.yml hooks seeds vault1 vault2 vault3"`;

exports[`add ok: seed with site 3`] = `
"version: 1
vaults:
    -
        fsPath: vault
        seed: dendron.foo
        name: dendron.foo
    -
        fsPath: vault1
    -
        fsPath: vault2
    -
        fsPath: vault3
        name: vaultThree
useFMTitle: true
useNoteTitleForLink: true
noAutoCreateOnDefinition: true
noLegacyNoteRef: true
noXVaultWikiLink: true
lookupConfirmVaultOnCreate: false
mermaid: true
useKatex: true
autoFoldFrontmatter: true
journal:
    dailyDomain: daily
    name: journal
    dateFormat: y.MM.dd
    addBehavior: childOfDomain
    firstDayOfWeek: 1
site:
    copyAssets: true
    siteHierarchies:
        - root
    siteRootDir: docs
    usePrettyRefs: true
    title: Dendron
    description: Personal knowledge space
    duplicateNoteBehavior:
        action: useVault
        payload:
            - vault1
            - vault2
            - vaultThree
            - dendron.foo
initializeRemoteVaults: true
seeds:
    dendron.foo:
        site:
            url: 'https://foo.com'
            index: foo
"
`;

exports[`add ok: seed with site 4`] = `
"{
    \\"folders\\": [
        {
            \\"path\\": \\"seeds/dendron.foo/vault\\",
            \\"name\\": \\"dendron.foo\\"
        },
        {
            \\"path\\": \\"vault1\\"
        },
        {
            \\"path\\": \\"vault2\\"
        },
        {
            \\"path\\": \\"vault3\\",
            \\"name\\": \\"vaultThree\\"
        }
    ],
    \\"settings\\": {},
    \\"extensions\\": {}
}"
`;

exports[`init convert workspace error: no vaults 1`] = `"dendron.yml hooks"`;

exports[`init convert workspace error: no vaults 2`] = `
"version: 1
vaults: []
useFMTitle: true
useNoteTitleForLink: true
noAutoCreateOnDefinition: true
noLegacyNoteRef: true
noXVaultWikiLink: true
lookupConfirmVaultOnCreate: false
mermaid: true
useKatex: true
autoFoldFrontmatter: true
journal:
    dailyDomain: daily
    name: journal
    dateFormat: y.MM.dd
    addBehavior: childOfDomain
    firstDayOfWeek: 1
site:
    copyAssets: true
    siteHierarchies:
        - root
    siteRootDir: docs
    usePrettyRefs: true
    title: Dendron
    description: Personal knowledge space
initializeRemoteVaults: true
"
`;

exports[`init convert workspace ok: diff root name 1`] = `"dendron.yml fooVault hooks seed.yml"`;

exports[`init convert workspace ok: diff root name 2`] = `
"version: 1
vaults:
    -
        fsPath: fooVault
useFMTitle: true
useNoteTitleForLink: true
noAutoCreateOnDefinition: true
noLegacyNoteRef: true
noXVaultWikiLink: true
lookupConfirmVaultOnCreate: false
mermaid: true
useKatex: true
autoFoldFrontmatter: true
journal:
    dailyDomain: daily
    name: journal
    dateFormat: y.MM.dd
    addBehavior: childOfDomain
    firstDayOfWeek: 1
site:
    copyAssets: true
    siteHierarchies:
        - root
    siteRootDir: docs
    usePrettyRefs: true
    title: Dendron
    description: Personal knowledge space
    duplicateNoteBehavior:
        action: useVault
        payload:
            - fooVault
initializeRemoteVaults: true
"
`;

exports[`init convert workspace ok: diff root name 3`] = `
"name: foo
publisher: dendron
description: some foo
license: CC
root: fooVault
repository:
    type: git
    url: ''
"
`;

exports[`init create workspace basic 1`] = `".gitignore dendron.code-workspace dendron.yml hooks seed.yml vault"`;

exports[`init create workspace basic 2`] = `
"version: 1
vaults:
    -
        fsPath: vault
useFMTitle: true
useNoteTitleForLink: true
noAutoCreateOnDefinition: true
noLegacyNoteRef: true
noXVaultWikiLink: true
lookupConfirmVaultOnCreate: false
mermaid: true
useKatex: true
autoFoldFrontmatter: true
journal:
    dailyDomain: daily
    name: journal
    dateFormat: y.MM.dd
    addBehavior: childOfDomain
    firstDayOfWeek: 1
site:
    copyAssets: true
    siteHierarchies:
        - root
    siteRootDir: docs
    usePrettyRefs: true
    title: Dendron
    description: Personal knowledge space
    duplicateNoteBehavior:
        action: useVault
        payload:
            - vault
initializeRemoteVaults: true
"
`;

exports[`init create workspace basic 3`] = `
"name: foo
publisher: dendron
description: some foo
license: CC
root: vault
repository:
    type: git
    url: ''
"
`;

exports[`remove error: nothing to remove 1`] = `
Object {
  "error": [Error: seed with id dendron.no-exist not in dendron.yml],
}
`;

exports[`remove ok: remove initialized seed 1`] = `""`;

exports[`remove ok: remove initialized seed 2`] = `"dendron.foo"`;

exports[`remove ok: remove initialized seed 3`] = `
"version: 1
vaults:
    -
        fsPath: vault1
    -
        fsPath: vault2
    -
        fsPath: vault3
        name: vaultThree
useFMTitle: true
useNoteTitleForLink: true
noAutoCreateOnDefinition: true
noLegacyNoteRef: true
noXVaultWikiLink: true
lookupConfirmVaultOnCreate: false
mermaid: true
useKatex: true
autoFoldFrontmatter: true
journal:
    dailyDomain: daily
    name: journal
    dateFormat: y.MM.dd
    addBehavior: childOfDomain
    firstDayOfWeek: 1
site:
    copyAssets: true
    siteHierarchies:
        - root
    siteRootDir: docs
    usePrettyRefs: true
    title: Dendron
    description: Personal knowledge space
    duplicateNoteBehavior:
        action: useVault
        payload:
            - vault1
            - vault2
            - vaultThree
            - dendron.foo
initializeRemoteVaults: true
seeds: {}
"
`;

exports[`remove ok: remove non-initialized seed 1`] = `
"version: 1
vaults:
    -
        fsPath: vault1
    -
        fsPath: vault2
    -
        fsPath: vault3
        name: vaultThree
useFMTitle: true
useNoteTitleForLink: true
noAutoCreateOnDefinition: true
noLegacyNoteRef: true
noXVaultWikiLink: true
lookupConfirmVaultOnCreate: false
mermaid: true
useKatex: true
autoFoldFrontmatter: true
journal:
    dailyDomain: daily
    name: journal
    dateFormat: y.MM.dd
    addBehavior: childOfDomain
    firstDayOfWeek: 1
site:
    copyAssets: true
    siteHierarchies:
        - root
    siteRootDir: docs
    usePrettyRefs: true
    title: Dendron
    description: Personal knowledge space
    duplicateNoteBehavior:
        action: useVault
        payload:
            - vault1
            - vault2
            - vaultThree
            - dendron.foo
initializeRemoteVaults: true
seeds: {}
"
`;
